# hojicha

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  LICENSE  README.md  build.sh  build_initrd.sh  clean.sh  config.sh  headers.sh  limine.conf  make_iso.sh  run_virtual.sh  target_triplet_to_arch.sh
cmake/: HojichaBuild.cmake  copy_compiler_runtime_object.cmake
cmake/toolchains/: elf.cmake
kernel/: CMakeLists.txt  Makefile
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: boot.s  crti.s  crtn.s  enable_paging.asm  irq.asm  isr.asm  linker.ld  load_pd.asm  loadgdt.asm  loadidt.asm  make.config  protected.c  tty.c  vga.h
kernel/arch/x86_64/: CMakeLists.txt  crti.s  crtn.s  enter_ring3.asm  entry.asm  irq.asm  isr.asm  linker.ld  load_gdt.asm  load_pd.asm  load_tss.asm  make.config  make_fork_kstack.asm  switch_to.asm  vga.c
kernel/cpu/: CMakeLists.txt  gdt.c  idt.c  irq.c  isr.c
kernel/dev/: CMakeLists.txt  chardev.c  chardev_test.c  console.c  fb.c  null.c  zero.c
kernel/drivers/: CMakeLists.txt  keyboard.c  pic.c  pit.c  serial.c  timer.c  tty.c  tty_control.c
kernel/fonts/: CMakeLists.txt  inconsolata.c
kernel/fs/: CMakeLists.txt  devfs.c  initrd.c  initrd_test.c  vfs.c  vfs_test.c
kernel/include/: haddr.h  hlog.h  io.h  limine.h  pic.h  serial.h  timer.h
kernel/include/cpu/: gdt.h  idt.h  isr.h  protected.h  tss.h
kernel/include/dev/: chardev.h  chardev_test.h  console.h  fb.h  null.h  zero.h
kernel/include/drivers/: keyboard.h  pic.h  pit.h  serial.h  tty.h  tty_control.h  vga.h
kernel/include/fonts/: inconsolata.h
kernel/include/fs/: devfs.h  initrd.h  initrd_test.h  ustar.h  vfs.h  vfs_test.h  vfs_utils.h
kernel/include/kernel/: elf.h  g_kernel.h  kernel_state.h  ktime.h  multitask.h  semaphore.h  tty.h
kernel/include/memory/: hmalloc_test.h  kmalloc.h  kmalloc_test.h  pmm.h  vma.h  vma_test.h  vmm.h
kernel/include/multitask/: bootmodule.h  elf.h  mutex.h  scheduler.h  scheduler_ast.h  spinlock.h  syscall.h  syscall_callbacks.h  syscall_utils.h  task.h  wait_queue.h
kernel/include/utils/: irq.h  ringbuffer.h  ringbuffer_test.h  set_out.h  test.h
kernel/kernel/: CMakeLists.txt  bootmodule.c  elf.c  g_kernel.c  kernel.c  kernel_state.c  ktime.c  multitask.c  semaphore.c
kernel/memory/: CMakeLists.txt  hmalloc_test.c  kmalloc.c  kmalloc_test.c  pmm.c  vma.c  vma_internal.h  vma_test.c  vmm.c
kernel/multitask/: CMakeLists.txt  bootmodule.c  elf.c  mutex.c  scheduler.c  scheduler_ast.c  semaphore.c  spinlock.c  syscall.c  wait_queue.c
kernel/multitask/syscalls/: CMakeLists.txt  syscall_brk.c  syscall_chdir.c  syscall_close.c  syscall_dup2.c  syscall_execve.c  syscall_exit.c  syscall_fork.c  syscall_getcwd.c  syscall_getdents.c  syscall_ioctl.c  syscall_link.c  syscall_lseek.c  syscall_mkdir.c  syscall_mmap.c  syscall_nanosleep.c  syscall_open.c  syscall_read.c  syscall_readlink.c  syscall_rmdir.c  syscall_stat.c  syscall_symlink.c  syscall_unlink.c  syscall_utils.c  syscall_waitpid.c  syscall_write.c
kernel/utils/: CMakeLists.txt  hlog.c  io.c  ringbuffer.c  ringbuffer_test.c
libc/: CMakeLists.txt  Makefile  errno.c
libc/arch/x86_64/: CMakeLists.txt  make.config  memcpy.asm
libc/ctype/: CMakeLists.txt
libc/dirent/: CMakeLists.txt  getdents.c
libc/fcntl/: CMakeLists.txt  open.c  read.c  write.c
libc/hmalloc/: CMakeLists.txt  hmalloc.c
libc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  hmalloc.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/include/internal/: __hlibc_heap.h  __hlibc_prologue.h  __stdio.h  __syscalls.h
libc/include/sys/: __syscalls.h  cdefs.h  ioctl.h  mman.h  stat.h  wait.h
libc/internal/: CMakeLists.txt  __hlibc_heap.c  __hlibc_prologue.c  __syscalls.asm  crt0.s
libc/stdio/: CMakeLists.txt  fgetc.c  fgets.c  fputc.c  printf.c  putchar.c  puts.c  snprintf.c  streams.c  vprintf.c  vsnprintf.c
libc/stdlib/: CMakeLists.txt  abort.c  assert.c  calloc.c  exit.c  free.c  getenv.c  itoa.c  malloc.c  utoa.c
libc/string/: CMakeLists.txt  memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strcmp.c  strcpy.c  strdup.c  strlen.c  strncmp.c  strtok.c  strtok_r.c
libc/sys/: CMakeLists.txt  ioctl.c  mkdir.c  mman.c  stat.c  waitpid.c
libc/time/: CMakeLists.txt  nanosleep.c
libc/unistd/: CMakeLists.txt  access.c  brk.c  chdir.c  close.c  dup2.c  execve.c  fork.c  getcwd.c  link.c  lseek.c  readlink.c  rmdir.c  sbrk.c  sleep.c  symlink.c  unlink.c
scripts/: verify_scheduler_ast.py
userspace/: CMakeLists.txt  Makefile  bigmaths.c  cat.c  clear.c  crt0.s  echo.c  fbrainbow.c  hbfi.c  hmalloc_test.c  init.c  ln.c  ls.c  mkdir.c  pwd.c  rm.c  rmdir.c  sh.c  touch.c  unlink.c
